--- a/projeto final/assets/CSS/StyleSheet.css
+++ b/projeto final/assets/CSS/StyleSheet.css
@@ -57,3 +57,34 @@ body {
     background-color: aquamarine;
     color: rgba(3, 126, 226, 0.633);
 }
+
+#Fazer {
+    background-color: lightcoral;
+}
+
+#Fazendo {
+    background-color: violet;
+
+}
+#Feito {
+    background-color: greenyellow;
+}
+.Nome_container {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    padding: 20px;
+}
+
+.Nome_container h2 {
+    padding: 10px;
+    background-color: blue;
+    border-radius: 20px;
+    color: aliceblue;
+    font-family: cursive;
+    box-shadow: 0 0 5px rgba(0, 0, 0, 0.5);
+    align-items: center;
+
+
+    
+}
